Add JobConfigService